--- a/src/components/earth-scene/nav-panel/navPanel.css
+++ b/src/components/earth-scene/nav-panel/navPanel.css
@@ -1,3 +1,35 @@
-.container{
-    background-color: brown;
+.panel {
+    width: 667px;
+    height: 776px;
+    background: rgba(196, 196, 196, 0.1);
+    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.25), inset 0px -4px 4px 4px rgba(237, 237, 237, 0.15);
+    backdrop-filter: blur(15px);
+    border-radius: 50px;
+    padding: 41px 39px 34px 53px;
+}
+
+.panel__title {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 64px;
+    line-height: 74px;
+    color: #F7F7F7;
+}
+
+.panel__text {
+    margin-top: 59px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 40px;
+    color: #F7F7F7;
+    text-shadow: 4px 4px 4px #000000;
+}
+
+.panel__container {
+    display: grid;
+    margin-top: 48px;
+    grid-template-columns: 300px 300px;
+    row-gap: 30px;
+    column-gap: 48px;
 }
