--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+
+#root{
+  height: 100%;
+}
+
+body{
+  background: linear-gradient(0deg, #060C31 14.51%, #203C7E 66.21%, #4364AD 100%);
+}
+
 body {
   width:100vw;
   height: 100vh;
