--- a/src/components/earth-scene/nav-panel/nav-panel-item/navPanelItem.css
+++ b/src/components/earth-scene/nav-panel/nav-panel-item/navPanelItem.css
@@ -7,13 +7,19 @@
     border: none;
     font-style: normal;
     font-weight: normal;
-    font-size: 24px;
+    font-size: 2vh;
     line-height: 26px;
     text-transform: uppercase;
     color: #F7F7F7;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
+    display: flex;
 }
 
+.item__wrapper{
+    margin-right: 18px;
+    width: 1em;
+    height: 0.75em;
+}
 .container__item:hover {
     background: #31D12B;
 }
