--- a/src/components/earth-scene/nav-panel/navPanel.css
+++ b/src/components/earth-scene/nav-panel/navPanel.css
@@ -1,6 +1,6 @@
 .panel {
-    height: 66vh;
-    width: 33vw;
+    height: 60vh;
+    width: 40vw;
     background: rgba(196, 196, 196, 0.1);
     box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.25), inset 0px -4px 4px 4px rgba(237, 237, 237, 0.15);
     backdrop-filter: blur(15px);
@@ -11,7 +11,7 @@
 .panel__title {
     font-style: normal;
     font-weight: normal;
-    font-size: 2em;
+    font-size: 6vh;
     line-height: 74px;
     color: #F7F7F7;
 }
@@ -32,4 +32,13 @@
     grid-template-columns: 1fr 1fr;
     row-gap: 30px;
     column-gap: 48px;
+}
+
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin-left: 37px;
 }
