--- a/src/components/earth-scene/nav-panel/navPanel.css
+++ b/src/components/earth-scene/nav-panel/navPanel.css
@@ -1,44 +1,45 @@
 .panel {
-    height: 60vh;
-    width: 40vw;
-    background: rgba(196, 196, 196, 0.1);
-    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.25), inset 0px -4px 4px 4px rgba(237, 237, 237, 0.15);
-    backdrop-filter: blur(15px);
-    border-radius: 50px;
-    padding: 41px 39px 34px 53px;
-}
-
-.panel__title {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 6vh;
-    line-height: 74px;
-    color: #F7F7F7;
+  height: 60vh;
+  width: 40vw;
+  background: rgba(196, 196, 196, 0.1);
+  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.25),
+    inset 0px -4px 4px 4px rgba(237, 237, 237, 0.15);
+  backdrop-filter: blur(15px);
+  border-radius: 50px;
+  padding: 41px 39px 34px 53px;
+  display: flex;
+  flex-direction: column;
 }
 
 .panel__text {
-    margin-top: 59px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 40px;
-    color: #F7F7F7;
-    text-shadow: 4px 4px 4px #000000;
+  margin-top: 3vh; /* 59px*/
+  font-style: normal;
+  font-weight: normal;
+  font-size: 2vw;
+  line-height: 40px;
+  color: #f7f7f7;
+  text-shadow: 4px 4px 4px #000000;
 }
 
-.panel__container {
-    display: grid;
-    margin-top: 48px;
-    grid-template-columns: 1fr 1fr;
-    row-gap: 30px;
-    column-gap: 48px;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin-left: 37px;
 }
-
-.wrapper{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin-left: 37px;
+@media (max-width: 912px) {
+  .wrapper {
+    margin: 0;
+    width: 100vw;
+  }
+  .panel {
+    height: 62.5vh;
+    width: 83vw;
+    padding: 20px;
+  }
+  .panel__text {
+    font-size: 5vw;
+  }
 }
