--- a/src/components/earth-scene/nav-panel/navPanel.css
+++ b/src/components/earth-scene/nav-panel/navPanel.css
@@ -22,17 +22,42 @@
 }
 
 .wrapper {
+  position: absolute;
+  left: 0;
+  top: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
   margin-left: 37px;
+  z-index: 100000;
+  transition: transform 1s ease;
+}
+
+.wrapper.visible{
+  transform: translateY(0);
+}
+
+.panel-open-btn{
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translateY(-100%);
+}
+
+.panel__close-btn{
+  display: none;
+}
+
+.panel-open-btn{
+  display: none;
 }
 @media (max-width: 912px) {
   .wrapper {
     margin: 0;
     width: 100vw;
+    transform: translateY(100%);
   }
   .panel {
     height: 62.5vh;
@@ -41,5 +66,15 @@
   }
   .panel__text {
     font-size: 5vw;
+  }
+  .panel__title-wrapper{
+    display: none;
+  }
+  .panel__close-btn{
+    display: flex;
+    justify-content: flex-end;
+  }
+  .panel-open-btn{
+    display: block;
   }
 }
