--- a/src/components/attraction-scene/attracrion-popup/popup.css
+++ b/src/components/attraction-scene/attracrion-popup/popup.css
@@ -1,63 +1,64 @@
 .popup-title {
-    position: relative;
-    border: 4px solid #f2f2f2;
-    box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.25);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 100%;
-    padding: 14px;
-    cursor: pointer;
+  position: relative;
+  border: 4px solid #f2f2f2;
+  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.25);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  padding: 14px;
+  cursor: pointer;
 }
 
 .popup-title img {
-    width: 32px;
+  width: 32px;
 }
 
 .popup-title__text {
-    display: none;
-    font-family: "Neucha";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 26px;
-    text-transform: uppercase;
-    color: #ffffff;
+  display: none;
+  font-family: "Neucha";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 26px;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
 .popup-title.active {
-    cursor: text;
-    border-radius: 49px;
-    padding-left: 38px;
+  cursor: text;
+  border-radius: 49px;
+  padding-left: 38px;
 }
 
 .popup-title.active img {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .popup-title__text.active {
-    display: block;
+  display: block;
 }
 
 .popup__body {
-    display: none;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 26px;
-    color: #F2F2F2;
-    position: absolute;
-    padding: 26px 16px;
-    bottom: 0;
-    transform: translateY(100%);
-    word-wrap: break-word;
-    left: 5%;
-    width: 90%;
-    border: 5px solid #E4DDDD;
-    box-sizing: border-box;
-    border-radius: 0px 0px 54px 54px;
+  display: none;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 26px;
+  color: #f2f2f2;
+  position: absolute;
+  padding: 26px 16px;
+  bottom: 0;
+  transform: translateY(100%);
+  word-wrap: break-word;
+  left: 5%;
+  width: 90%;
+  border: 5px solid #e4dddd;
+  box-sizing: border-box;
+  border-radius: 0px 0px 54px 54px;
 }
 
 .popup__body.active {
-    display: inline-block;
+  display: inline-block;
 }
+
