--- a/src/components/attraction-scene/attracrion-popup/popup.css
+++ b/src/components/attraction-scene/attracrion-popup/popup.css
@@ -1,11 +1,11 @@
 .popup-title {
-  position: relative;
+  position: absolute;
   border: 4px solid #f2f2f2;
   box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.25);
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 100%;
+  border-radius: 49px;
   padding: 14px;
   cursor: pointer;
 }
@@ -27,7 +27,8 @@
 
 .popup-title.active {
   border-radius: 49px;
-  padding-left: 38px;
+  padding-right: 60px;
+  transition: all 0.4s ease-in;
 }
 
 .popup-title.active img {
@@ -46,7 +47,7 @@
   line-height: 26px;
   color: #f2f2f2;
   position: absolute;
-  padding: 26px 16px;
+  padding: 16px 20px 40px;
   bottom: 0;
   transform: translateY(100%);
   word-wrap: break-word;
@@ -54,12 +55,32 @@
   width: 90%;
   border: 5px solid #e4dddd;
   box-sizing: border-box;
-  border-radius: 0px 0px 54px 54px;
+  border-radius: 0px 0px 54px 54px; 
+}
+
+.popup__body__text{
+  opacity: 0;
+  animation: showText 0.3s forwards;
+  animation-delay: 0.4s;
+}
+
+@keyframes showText {
+  0%{
+    opacity: 0;
+  }
+
+  50%{
+    opacity: 0.25;
+  }
+
+  100%{
+    opacity: 1;
+  }
 }
 
 .popup__body.active {
   display: inline-block;
-  /* max-height: 300px; */
-  /* overflow: hidden; */
+  max-height: 300px; 
+  overflow: hidden;
 }
 
