--- a/src/components/attraction-scene/attracrion-popup/popup.css
+++ b/src/components/attraction-scene/attracrion-popup/popup.css
@@ -60,6 +60,7 @@
 
 .popup__body__text{
   opacity: 0;
+  overflow: hidden;
   animation: showText 0.3s forwards;
   animation-delay: 0.4s;
 }
@@ -80,7 +81,7 @@
 
 .popup__body.active {
   display: inline-block;
-  max-height: 300px; 
-  overflow: hidden;
+  max-height: 360px; 
+  /*overflow: hidden;*/
 }
 
