--- a/src/components/cross-button/crossButton.css
+++ b/src/components/cross-button/crossButton.css
@@ -2,22 +2,17 @@
   border: none;
   background-color: transparent;
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: column;
-  align-items: center;
-}
-
-.line {
-  border: 4px solid #f2f2f2;
   width: 24px;
-
-}
-.right {
-  transform: rotate(-135deg);
-}
-.left {
-  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-  transform: rotate(-45deg);
+  height: 24px;
+  --weight: 2px;
+  --aa: 1px;
+  --color: #FEFEFE;
+  border-radius: 3px;
+  background: linear-gradient(45deg, transparent calc(50% - var(--weight) - var(--aa)),
+                               var(--color) calc(50% - var(--weight)), var(--color) calc(50% + var(--weight)), 
+                               transparent calc(50% + var(--weight) + var(--aa))), 
+                               linear-gradient(-45deg, transparent calc(50% - var(--weight) - var(--aa)), 
+                               var(--color) calc(50% - var(--weight)), var(--color) calc(50% + var(--weight)), 
+                               transparent calc(50% + var(--weight) + var(--aa)));
+  margin-right: 2%;
 }
