--- a/src/components/earth-scene/nav-panel/nav-panel-item/navPanelItem.css
+++ b/src/components/earth-scene/nav-panel/nav-panel-item/navPanelItem.css
@@ -18,8 +18,9 @@
 .item__title{
     font-style: normal;
     font-weight: normal;
-    font-size: 1vw;
+    font-size: 1.8vw;
     line-height: 26px;
+    font-family: "Neucha";
     text-transform: uppercase;
     color: #F7F7F7;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
