--- a/src/components/earth-scene/nav-panel/navPanel.css
+++ b/src/components/earth-scene/nav-panel/navPanel.css
@@ -45,9 +45,21 @@
 
 .panel-open-btn {
   position: absolute;
-  left: 0;
-  top: 0;
+  left: 20px;
+  top: -15px;
   transform: translateY(-100%);
+}
+
+.button-open-btn{
+  background: transparent;
+  border: 4px solid rgba(196, 196, 196, 0.8);
+  border-radius: 10px;
+  padding: 5px 14px;
+  font-family: "Neucha";
+  font-weight: normal;
+  color: #f7f7f7;
+  font-size: 5.5vw;
+  box-shadow: 1px 4px 4px #000000;
 }
 
 .panel__close-btn {
