-add connection with Yandeks disk api; -create useDisk hook; -correct rotation formula;

--- a/src/components/attraction-scene/attracrion-popup/popup.css
+++ b/src/components/attraction-scene/attracrion-popup/popup.css
@@ -45,7 +45,8 @@
 }
 
 .popup-title__text.active {
-    display: block;
+    display: flex;
+    justify-content: space-between;
 }
 
 .popup__body {
