--- a/src/components/attraction-scene/attracrion-popup/popup.css
+++ b/src/components/attraction-scene/attracrion-popup/popup.css
@@ -8,6 +8,7 @@
     border-radius: 49px;
     padding: 14px;
     cursor: pointer;
+    transition: all 0.4s ease-out;
 }
 
 .popup-title img {
@@ -42,6 +43,7 @@
 
 .popup-title--active img {
     margin-right: 10px;
+    width: 32px;
 }
 
 .popup-title__text.active {
