--- a/src/components/earth-scene/nav-panel/navPanel.css
+++ b/src/components/earth-scene/nav-panel/navPanel.css
@@ -92,5 +92,20 @@
   }
   .panel-open-btn {
     display: block;
+    animation: visible 1.1s;
+  }
+
+  @keyframes visible {
+    0%{
+      opacity: 0;
+    }
+
+    80%{
+      opacity: 0;
+    }
+
+    100%{
+      opacity: 1;
+    }
   }
 }
